# spaced-repetition-django

./: .gitignore  README.md  pyproject.toml
apps/cards/: models.py  urls.py  views.py
apps/cards/migrations/: 0001_initial.py  0002_auto_20201119_1552.py  0003_auto_20201119_1604.py  0004_auto_20201126_1400.py  0005_auto_20201201_2143.py
apps/decks/: admin.py  models.py  urls.py  views.py
apps/decks/migrations/: 0001_initial.py  0002_auto_20201119_1552.py  0003_auto_20201119_1557.py  0004_auto_20201126_1400.py
apps/users/: models.py
apps/users/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
